# finite_source

./: .gitignore  MANIFEST.in  README.md  compile.do  pyproject.toml  setup.py  test.py
Finite/: __init__.py
source/: elliptic_integral.c  elliptic_integral.h  finite.c  finite.h  precalculate_table.c  python_3_wrapper.c  python_wrapper.c
src/src_C/: elliptic_integral.c  elliptic_integral.h  finite.c  precalculate_table.c  python_3_wrapper.c
tests/: org.npy  test.py  test_org.py
