[project]
name = "Finite"
version = "0.1.0"
description = "Calculate microlensing magnification with finite-source effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[tool.your-package.build]
cc = "gcc"
cxx = "g++"
cflags = ["-Ofast", "-Wall"]
enable-openmp = true

