[project]
name = "Finite"
version = "0.1.0"
description = "Calculate microlensing magnification with finite-source effects."
readme = "README.md"
requires-python = ">=3.10"


[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Finite"]

[tool.setuptools.package-data]
Finite = ["*.dat"]
